# MyAlbum-o-tsukuro

./: README.md  index.html  package-lock.json  package.json
.agents/workflows/: git-workflow.md
.github/workflows/: release.yml
src/: App.css  App.tsx  index.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: lib.rs  main.rs  types.rs
src-tauri/src/commands/: epub.rs  mod.rs  preview.rs  scan.rs
src-tauri/src/epub/: builder.rs  image_processor.rs  mod.rs
src/components/: FolderSelector.css  FolderSelector.tsx  Header.css  Header.tsx  ImageCard.css  ImageCard.tsx  ImageGrid.css  ImageGrid.tsx  MetadataForm.css  MetadataForm.tsx  ProgressOverlay.css  ProgressOverlay.tsx
src/hooks/: useEpubGenerator.ts
src/types/: index.ts
