[package]
name = "myalbum"
version = "0.1.0"
description = "画像フォルダからEPUB電子書籍を生成するデスクトップアプリ"
authors = ["KINGkawamura"]
edition = "2021"

[lib]
name = "myalbum_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
epub-builder = "0.8"
image = "0.25"
walkdir = "2"
base64 = "0.22"
natord = "1.0"
log = "0.4"
